--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/casa_do_codigo?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=123abc
+spring.jpa.show-sql: true
